增加 种虫时设置可以移动 设置存活时间

--- a/app/src/main/res/layout/acticity_add_virus_point.xml
+++ b/app/src/main/res/layout/acticity_add_virus_point.xml
@@ -55,6 +55,8 @@
                 android:hint="@string/no_thank_you"
                 android:importantForAutofill="no"
                 android:inputType="textMultiLine" />
+
+            <include layout="@layout/set_bug_property" />
         </LinearLayout>
     </ScrollView>
 
